assert(_OnDeck != Self->_MutexEvent,"invariant") with -XX:+PrintMallocFree

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 11
    • Affects Version/s: hs17, 8u40, 9
    • Component/s: hotspot
    • None
    • b01
    • sparc
    • solaris_10

      Run java -XX:+PrintMallocFree Queens

      with a jvmg build.

      # Internal Error (/java/east/u2/kk1971/hs17fixes6879572/src/share/vm/runtime/mutex.cpp:439), pid=457, tid=2
      # Error: assert(_OnDeck != Self->_MutexEvent,"invariant")
      #
      # JRE version: 7.0-b74
      # Java VM: OpenJDK Server VM (17.0-b01-internal-fastdebug mixed mode solaris-sparc )

            Assignee:
            Coleen Phillimore
            Reporter:
            Karen Kinnear (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:
              Imported:
              Indexed: