6909265: assert(_OnDeck != Self->_MutexEvent,"invariant") with -XX:+PrintMallocFree

Convert to logging without thread locking

Reviewed-by: dholmes, zgu, hseigel